# internvl2-utils

./: .gitignore  README.md  internvl-attention-visualizer.py  main.py  pyproject.toml
scripts/attention/: internvl-attention-visualizer.py
scripts/datasets/: docvqa.py
scripts/utils/: utils.py
