[tool.poetry]
name = "vlm-playground"
version = "0.1.0"
description = ""
authors = ["johanngerberding <johann.gerberding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.44.2"
torch = "^2.4.0"
decord = "^0.6.0"
numpy = "^2.1.0"
torchvision = "^0.19.0"
timm = "^1.0.9"
sentencepiece = "^0.2.0"
protobuf = "^5.28.0"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
